--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(FastSearch_Windows)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+add_definitions(-DCMAKE_BUILD)
+
 # Download and include Dear ImGui
 include(FetchContent)
 FetchContent_Declare(
